--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.1.3",
+    "classnames": "^2.3.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-file-drop": "^3.1.2",
-    "react-scripts": "4.0.2"
+    "react-scripts": "4.0.2",
+    "react-spinners": "^0.13.6"
   },
   "scripts": {
     "start": "react-scripts start",
